[gd_scene load_steps=12 format=2]

[ext_resource path="res://asset's/img/character's/cat_idle.png" type="Texture" id=1]
[ext_resource path="res://scene's/levels/Math/BG2_Landscape.png" type="Texture" id=2]
[ext_resource path="res://scene's/levels/Math/Ribbon.png" type="Texture" id=3]
[ext_resource path="res://scene's/levels/Math/Equations_loc.gd" type="Script" id=4]
[ext_resource path="res://scene's/levels/Math/board.png" type="Texture" id=5]
[ext_resource path="res://scene's/levels/Math/operate/Block_eq.png" type="Texture" id=6]
[ext_resource path="res://scene's/levels/Math/numbers/negative_nbr/miss.png" type="Texture" id=7]
[ext_resource path="res://scene's/levels/Math/drag_folder/dragable_obj.tscn" type="PackedScene" id=8]
[ext_resource path="res://scene's/menu/control_menu_UI.tscn" type="PackedScene" id=9]
[ext_resource path="res://scene's/levels/Math/answers.gd" type="Script" id=10]
[ext_resource path="res://scene's/levels/Math/finish_game/Finish_Ui.tscn" type="PackedScene" id=11]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Back_done" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="board" type="TextureRect" parent="."]
margin_left = 40.0
margin_top = 60.0
margin_right = 1167.0
margin_bottom = 597.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Equations_loc" type="GridContainer" parent="board"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -388.0
margin_top = -217.0
margin_right = 388.0
margin_bottom = 217.0
mouse_filter = 2
columns = 5
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="drag_A" type="TextureRect" parent="board/Equations_loc"]
margin_right = 157.0
margin_bottom = 138.0
rect_min_size = Vector2( 157, 138 )
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="op_v" type="TextureRect" parent="board/Equations_loc"]
margin_left = 161.0
margin_right = 318.0
margin_bottom = 138.0
rect_min_size = Vector2( 157, 138 )
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="drag_B" type="TextureRect" parent="board/Equations_loc"]
margin_left = 322.0
margin_right = 479.0
margin_bottom = 138.0
rect_min_size = Vector2( 157, 138 )
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="equal" type="TextureRect" parent="board/Equations_loc"]
margin_left = 483.0
margin_right = 640.0
margin_bottom = 138.0
rect_min_size = Vector2( 157, 138 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="drag_C" type="TextureRect" parent="board/Equations_loc"]
margin_left = 644.0
margin_right = 801.0
margin_bottom = 138.0
rect_min_size = Vector2( 157, 138 )
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="drag_A2" type="TextureRect" parent="board/Equations_loc"]
margin_top = 142.0
margin_right = 157.0
margin_bottom = 280.0
rect_min_size = Vector2( 157, 138 )
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="op_v2" type="TextureRect" parent="board/Equations_loc"]
margin_left = 161.0
margin_top = 142.0
margin_right = 318.0
margin_bottom = 280.0
rect_min_size = Vector2( 157, 138 )
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="drag_B2" type="TextureRect" parent="board/Equations_loc"]
margin_left = 322.0
margin_top = 142.0
margin_right = 479.0
margin_bottom = 280.0
rect_min_size = Vector2( 157, 138 )
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="equal2" type="TextureRect" parent="board/Equations_loc"]
margin_left = 483.0
margin_top = 142.0
margin_right = 640.0
margin_bottom = 280.0
rect_min_size = Vector2( 157, 138 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="drag_C2" type="TextureRect" parent="board/Equations_loc"]
margin_left = 644.0
margin_top = 142.0
margin_right = 801.0
margin_bottom = 280.0
rect_min_size = Vector2( 157, 138 )
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="drag_A3" type="TextureRect" parent="board/Equations_loc"]
margin_top = 284.0
margin_right = 157.0
margin_bottom = 422.0
rect_min_size = Vector2( 157, 138 )
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="op_v3" type="TextureRect" parent="board/Equations_loc"]
margin_left = 161.0
margin_top = 284.0
margin_right = 318.0
margin_bottom = 422.0
rect_min_size = Vector2( 157, 138 )
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="drag_B3" type="TextureRect" parent="board/Equations_loc"]
margin_left = 322.0
margin_top = 284.0
margin_right = 479.0
margin_bottom = 422.0
rect_min_size = Vector2( 157, 138 )
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="equal3" type="TextureRect" parent="board/Equations_loc"]
margin_left = 483.0
margin_top = 284.0
margin_right = 640.0
margin_bottom = 422.0
rect_min_size = Vector2( 157, 138 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="drag_C3" type="TextureRect" parent="board/Equations_loc"]
margin_left = 644.0
margin_top = 284.0
margin_right = 801.0
margin_bottom = 422.0
rect_min_size = Vector2( 157, 138 )
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Ribbon_ans" type="TextureRect" parent="board"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 639.0
margin_top = 119.0
margin_right = 1864.0
margin_bottom = 320.0
rect_rotation = 180.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="answers" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -140.0
margin_right = 462.0
margin_bottom = -2.0
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="drag_obj" parent="answers" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 157.0
margin_bottom = 138.0
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="drag_obj2" parent="answers" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 161.0
margin_top = 0.0
margin_right = 318.0
margin_bottom = 138.0
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="drag_obj3" parent="answers" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 322.0
margin_top = 0.0
margin_right = 479.0
margin_bottom = 138.0
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="drag_obj4" parent="answers" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 483.0
margin_top = 0.0
margin_right = 640.0
margin_bottom = 138.0
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="drag_obj5" parent="answers" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 644.0
margin_top = 0.0
margin_right = 801.0
margin_bottom = 138.0
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="drag_obj6" parent="answers" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 805.0
margin_top = 0.0
margin_right = 962.0
margin_bottom = 138.0
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="CatIdle" type="Sprite" parent="."]
position = Vector2( 1163, 490 )
scale = Vector2( 0.295806, 0.315104 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="control_menu_UI" parent="." instance=ExtResource( 9 )]
mouse_filter = 2

[node name="Finish_Ui" parent="." instance=ExtResource( 11 )]
visible = false
mouse_filter = 2

[connection signal="sent_vactor" from="board/Equations_loc" to="answers" method="_on_Equations_loc_sent_vactor"]
[connection signal="verified_answers" from="board/Equations_loc" to="answers" method="_on_Equations_loc_verified_answers"]
[connection signal="result" from="answers" to="Finish_Ui" method="_on_answers_result"]
